--- a/src/components/MovieView/movie-view.scss
+++ b/src/components/MovieView/movie-view.scss
@@ -5,3 +5,18 @@
   border: none;
   border-radius: 4px;
 }
+img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.movie-title,
+.movie-description,
+.movie-genre,
+.movie-director,
+.movie-biography,
+.movie-birthyear,
+.movie-actors {
+  font-weight: bold;
+  color: darkblue;
+}
