--- a/src/components/MovieView/movie-view.scss
+++ b/src/components/MovieView/movie-view.scss
@@ -1,10 +1,12 @@
-.back-button {
+.back-button,
+.logout-button {
   padding: 4px 12px 4px 12px;
   color: whitesmoke;
   background-color: dodgerblue;
   border: none;
   border-radius: 4px;
 }
+
 img {
   width: 100%;
 }
