login view moved to the middle

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,9 @@
+// index.scss
+$primary: SeaGreen;
+$color: steelblue;
+
+@import "~bootstrap/scss/bootstrap.scss";
+
 $color: steelblue;
 
 .my-flix {
