--- a/src/components/MovieView/movie-view.scss
+++ b/src/components/MovieView/movie-view.scss
@@ -1,11 +1,16 @@
+/* movies-view.scss */
+
+@import "../../index.scss";  // Adjust the relative path to reach index.scss
+
 .back-button,
 .logout-button {
-  padding: 4px 12px 4px 12px;
-  color: whitesmoke;
-  background-color: dodgerblue;
+  padding: 4px 12px;
+  color: $color; /* Use the $color variable defined in index.scss */
+  background-color: $primary; /* Use the $primary variable from index.scss */
   border: none;
   border-radius: 4px;
 }
+
 
 img {
   width: 100%;
@@ -20,4 +25,16 @@ img {
 .movie-actors {
   font-weight: bold;
   color: darkblue;
+}
+.back-button,
+.logout-button {
+  padding: 4px 12px 4px 12px;
+  color: whitesmoke;
+  background-color: dodgerblue;
+  border: none;
+  border-radius: 4px;
+}
+
+img {
+  width: 100%;
 }
