background color added to login page

--- a/src/components/MovieView/movie-view.scss
+++ b/src/components/MovieView/movie-view.scss
@@ -38,3 +38,10 @@ img {
 img {
   width: 100%;
 }
+
+
+.login-signup-col {
+  background-color: lightgreen;
+  padding: 20px;
+  border-radius: 10px;
+}
