--- a/src/components/MovieView/movie-view.scss
+++ b/src/components/MovieView/movie-view.scss
@@ -2,6 +2,12 @@
 
 @import "../../index.scss";  // Adjust the relative path to reach index.scss
 
+
+
+
+/* Add any other styling properties you need */
+
+
 .back-button,
 .logout-button {
   padding: 4px 12px;
